<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    android:padding="8dip"
    tools:context="com.android.assignment1.ActivityA">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:id="@+id/layout_title"
        >

        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_a"
            android:textSize="@dimen/font_large"
            android:textColor="@color/colorWhite"
            android:layout_toRightOf="@id/imageView_logo"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/layout_button"
        >
        <Button
            android:id="@+id/start_b_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/start_b_label_btn"
            android:textAllCaps="false"
            android:background="@color/colorLavender"
            android:padding="20dp"
            android:layout_margin="10dp"
            android:textColor="@color/colorBlack"
            android:onClick="startActivityB"
            />
        <Button
            android:id="@+id/start_dialog_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/start_dialog_label_btn"
            android:layout_toRightOf="@id/start_b_button"
            android:textAllCaps="false"
            android:background="@color/colorLavender"
            android:padding="20dp"
            android:textColor="@color/colorBlack"
            android:layout_margin="10dp"
            android:onClick="startDialog"
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="30dp">
        <TextView
            android:id="@+id/threads_count_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thread_count_title"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_medium"/>
        <TextView
            android:id="@+id/threads_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/threads_count_label"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            android:text="0"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_medium"/>
    </RelativeLayout>
    <View
        android:id="@+id/horizontal_line"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorWhite"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/close_app_button"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/close_app_label_btn"
        android:textSize="@dimen/font_medium"
        android:textAllCaps="false"
        android:layout_above="@id/horizontal_line"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/colorGrey"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:textColor="@color/colorBlack"
        android:onClick="closeApp" />

</LinearLayout>
