<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    android:padding="8dip"
    tools:context="com.android.assignment1.ActivityB"
    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:id="@+id/layout_title"
        >
        <ImageView
            android:id="@+id/imageView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher" />
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_b"
            android:textSize="@dimen/font_large"
            android:textColor="@color/colorWhite"
            android:layout_toRightOf="@id/imageView_logo"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorYellow"
        android:text="@string/text_activity_b"
        android:textSize="@dimen/font_medium"/>
    <View
        android:id="@+id/horizontal_line"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/colorWhite"
        android:layout_marginTop="30dp"/>
    <Button
        android:id="@+id/finish_b_btn"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_marginTop="50dp"
        android:text="@string/finish_b_label_btn"
        android:textAllCaps="false"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_above="@id/horizontal_line"
        android:background="@color/colorBlack"
        android:padding="20dp"
        android:textColor="@color/colorWhite"
        android:onClick="finishB"
        />
</LinearLayout>

